added validation in postDto CommentDto | added global exception handling